crates/tesshir/tests/fixtures/package/type_error/src/main.tess
use math::Point;
use math::sum;

fn use_math(p: Point) -> i32 {
    sum(p)
}
